# goit-python

./: .gitignore  README.md  m3task7.py  m3task8.py
Core/hw_module_11/: main.py
Core/hw_module_12/: main.py  test.py
Core/hw_module_8/: birthday.py
Core/hw_module_9/: main.py
Core/module10_test/: task1.py  task2.py  task4.py  task5.py  task6.py  task7.py
Core/module3/: m3task11.py  m3task3.py  m3task5.py  m3task6.py  m3task9.py
Core/module4/: task1.py  task10.py  task12.py  task13.py  task6.py  task9.py
Core/module5/: task11.py  task13.py  task14.py  task15.py  task3.py  task4.py  task8.py  task9.py
Core/module6_test/: task1.py  task5.py  task6.py
Core/module8_test/: task2.py
Core/module9_test/: task2.py
DS/cnn/: Untitled23.ipynb  Untitled24.ipynb  cnn.ipynb
DS/hw1/: HW1.ipynb
DS/hw10/: hw10.ipynb
DS/hw2/: Hw2.1.ipynb  Hw2.2.ipynb  Hw2.3.ipynb
Web/hw10/task1/: README.md  main.py  pyproject.toml
Web/hw9/: alembic.ini  main.py  mybase.db  pyproject.toml
Web/hw9/alembic/: env.py
Web/hw9/alembic/versions/: ad5498d9c717_v_01.py
Web/hw9/src/: models.py
hw_module_10/: main.py
hw_module_8/: birthday.py
hw_module_9/: main.py
lesson1/: hw2.py
module10_test/: task3.py
module3/: m3task10.py  m3task4.py
module4/: task11.py  task14.py  task2.py  task3.py  task4.py  task5.py  task7.py  task8.py
module5/: task1.py  task10.py  task12.py  task2.py  task5.py  task6.py  task7.py  task8.py
module6/: file_parser.py  main.py
module6_test/: 1.py  task2.py  task3.py  task4.py
module8_test/: task1.py  task2.py
module9_test/: task1.py
(+88 files in other folders)
