[tool.poetry]
name = "pythonproject6"
version = "0.1.0"
description = ""
authors = ["Vitaliy <vitaliytraschenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.3.4"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
